# tabl2

./: .gitignore  CNAME  a.py  apl-server.js  frink.js  funcs.js  index-old.html  index.html  index2.html  indexv1.html  lang.js  main.js  main.rs  misc.js  package-lock.json  package.json  rap  resize.html  scratch.js  sfj.py  style.css  type-apl.js  wrap  ws
backend/: repl.py  server.js
exec/: apl-server.js  index-old.html  repl.apl  style-old.css  vyx-old.py  vyx.py
exec/frink/: frink.in  repl.java
exec/helpers/: err
langs/apl/: apl.js
langs/bf/: bf.js  run.js
langs/frink/: commands.js  frink.js  parse.js
langs/joy/: joy.js
langs/ngn-apl/: ngn-apl.js
langs/pip/: pip.js
public/: .gitignore  index.html
public/langs/frink/: frink.js
public/static/: tauri.css
script/: .tabl.config.js  lang.js  main.js  tablook.js  utils.js
src-tauri/: tauri.conf.json
static/: tauri.css
tabl/: .gitignore  CNAME  index.html  main.js  package-lock.json  package.json  style.css
tabl/langs/frink/: commands.js
tabl/langs/frink/units/: sorted-units.js  units-clean.js
tabl/public/: index.html  style.css
tabl/public/script/: main.js
tabl/public/static/: style.css
tabl/script/: lang.js  main.js  utils.js
tabl/script/langs/: apl.js  bf.js  frink.js  lang.js  ngn-apl.js  pip.js
tabl/script/utils/: type-apl.js
tabl/src/: App.svelte  Box.svelte  Settings.svelte  index.html
tabl/src-tauri/: Cargo.toml  tauri.conf.json
tabl/src-tauri/src/: main.rs
tabl/svelte/public/: index.html  style.css
tabl/svelte/src/: App.svelte
(+5 files in other folders)
